src/test/ui/partialeq_help.stderr
error[E0277]: can't compare `&T` with `T`
  --> $DIR/partialeq_help.rs:2:7
   |
LL |     a == b;
   |       ^^ no implementation for `&T == T`
   |
   = help: the trait `std::cmp::PartialEq<T>` is not implemented for `&T`
   = help: consider adding a `where &T: std::cmp::PartialEq<T>` bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
